# bty_chtbt

./: .gitignore  0_xai_test.py  3_rag_retriver_options  MAC_SETUP.md  NAS_MAC_SETUP.md  README.md  chat_standalone.html  hugging_face_download.py  project_note.md  pyproject.toml  qa_chatbot.py  qa_chatbot_flask.py  qa_chatbot_local_llm.py  qa_lms_api.py  qa_lms_chatbot.py  rag_conversation_hugging_face.py  start_ngrok.sh  vector_load_test.py  vector_n_embed.py
templates/: index.html
